project name changed

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "countere-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://guram21.github.io/counter-app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
@@ -30,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
